--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 #DATASOURCE
 spring.datasource.url=jdbc:mysql://localhost:3306/padawandwwm
-spring.datasource.username=root
-spring.datasource.password=macron
+spring.datasource.username=sans_vaccin
+spring.datasource.password=etoile
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 #JPA
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.show-sql=false
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
