--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #DATASOURCE
 spring.datasource.url=jdbc:mysql://localhost:3306/padawandwwm
-spring.datasource.username=sans_vaccin
-spring.datasource.password=etoile
+spring.datasource.username=root
+spring.datasource.password=macron
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 #JPA
